--- a/3_Numpy_Array_Indexing_and_Selection.ipynb
+++ b/3_Numpy_Array_Indexing_and_Selection.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "3 - Numpy Array Indexing and Selection.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -306,10 +307,170 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mkuQIDiVP_fX"
+        "id": "mkuQIDiVP_fX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abe31280-3be9-4635-df20-1218b39945df"
       },
       "source": [
-        "two_dimensional[2][1:4]"
+        "a.shape"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Q9wiq6DP_fZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dd77336b-19aa-45fc-8ce8-bd6d273e1b49"
+      },
+      "source": [
+        "a.ndim"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "rzoH1VZLWVdF",
+        "outputId": "1e0d6bc8-9a02-4991-ad88-783e827d8641"
+      },
+      "source": [
+        "a.dtype.name"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'int64'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fva1PLMZWdfa",
+        "outputId": "4061d0b1-12c9-4fce-b131-317a1d9acbbe"
+      },
+      "source": [
+        "a.itemsize"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "36bjl-EpWkVG",
+        "outputId": "8812eb7d-c008-4545-a120-14edded14fa8"
+      },
+      "source": [
+        "a.size"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GVXpRUW5WpiE",
+        "outputId": "54d89f0e-caa9-4759-ec10-0d78e66709e1"
+      },
+      "source": [
+        "type(a)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gOCY1mRZW56r"
+      },
+      "source": [
+        "b = np.array([11, 12, 13])"
       ],
       "execution_count": null,
       "outputs": []
@@ -317,13 +478,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2Q9wiq6DP_fZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bmxz-Gb8W_qp",
+        "outputId": "397969ab-7c74-4ee2-a318-10ecec4e3279"
       },
       "source": [
-        ""
+        "b"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([11, 12, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
